Email field-alignment issues

--- a/src/app/views/scan-screen/scan-screen.component.less
+++ b/src/app/views/scan-screen/scan-screen.component.less
@@ -31,5 +31,12 @@ scan-screen {
     }
 }
 .form-control {
+    width:99%;
     padding-left: 1%;
+}
+
+@media (max-width :1024px){
+    .form-control {
+        width:98.5%;
+    }
 }
